attempt to fix issue on actual mobile phones with illustration chart spacing

--- a/src/components/common/illustration-chart/IllustrationChart.css
+++ b/src/components/common/illustration-chart/IllustrationChart.css
@@ -19,6 +19,6 @@
 
 @media only screen and (max-width: 640px) {
   .illu-chart__container {
-    margin: 1rem 0 3rem 0;
+    margin: 2rem 0;
   }
 }
